--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
+@import "~normalize.css";
+@import "~@blueprintjs/core/lib/css/blueprint.css";
+@import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
+
+html {
+  background-color: rgb(243, 243, 243);
+}
+
 .App {
+  margin: 4em;  
+}
+
+.centerconfirm {
+  padding: 2rem;
+  margin: 1em;
   text-align: center;
+  font-weight: 600;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.mainwindow {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.pe-card {
+  width: 500px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grid11 {
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: 1fr 1fr;
+}
+
+.grid1a {
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: 1fr auto;
+}
+
+.grid111 {
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.flexout{ 
+  display: flex; 
+  justify-content: space-between;
+}
+
+.reqf{
+  color: grey;
+  margin-bottom: 1em;
+  font-size: 0.8rem;
 }
